--- a/_config.yml
+++ b/_config.yml
@@ -267,9 +267,9 @@ compress_html:
 
 # Defaults
 defaults:
-  # _posts
+  #_posts
   - scope:
-      path: ""
+      path: "/posts"
       type: posts
     values:
       layout: single
