--- a/_config.yml
+++ b/_config.yml
@@ -15,13 +15,13 @@
 minimal_mistakes_skin: "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale: "en-US"
+locale: "ko_KR.utf8"
 title: "Hero's Note"
 title_separator: "-"
 subtitle: # site tagline that appears below site title in masthead
-name: "Son Hyeonho"
+name: "Son Hyeonho (Hero)"
 description: "안녕하세요. 백엔드 개발자 손현호 입니다. \n 감사합니다. "
-url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url: "https://icraft2170.github.io"
 baseurl: # the subpath of your site, e.g. "/blog"
 repository: # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser: # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -103,7 +103,7 @@ analytics:
 author:
   name: "Hero"
   avatar: # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio: "끈질기게"
+  bio: "현재에 최선을 다하기를"
   location: "Seoul"
   email:
   links:
@@ -269,7 +269,7 @@ compress_html:
 defaults:
   #_posts
   - scope:
-      path: "/posts"
+      path: ""
       type: posts
     values:
       layout: single
@@ -278,3 +278,10 @@ defaults:
       comments: # true
       share: true
       related: true
+  # _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
